[package]
name = "external_storage_server"
version = "0.0.1"
edition = "2018"
publish = false

[features]
default = ["protobuf-codec"]
protobuf-codec = ["kvproto/protobuf-codec", "grpcio/protobuf-codec", "external_storage/protobuf-codec"]
prost-codec = ["kvproto/prost-codec", "grpcio/prost-codec", "external_storage/prost-codec"]

[dependencies]
protobuf = "2"
futures = "0.3"
futures-io = "0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
grpcio = { version = "0.8",  default-features = false, features = ["openssl-vendored"] }
kvproto = { path = "../../../kvproto" }
external_storage = { path = "../external_storage", default-features = false }
tokio = { version = "0.2", features = ["rt-threaded"]}
async-trait = "0.1"
